--- a/index.html
+++ b/index.html
@@ -30,8 +30,8 @@
 										<li><a href="#">Manufacturing Processes</a>
 											<ul>
 												<li><a href="project1.html">Project 1</a></li>
-                                                <li><a href="projects-fram/project2.html">Project 2</a></li>
-                                                <li><a href="projects-fram/project3.html">Project 3</a></li>
+                                                <li><a href="project2.html">Project 2</a></li>
+                                                <li><a href="project3.html">Project 3</a></li>
                                                 <li><a href="projects-fram/project4.html">Project 4</a></li>
                                                 <li><a href="projects-fram/project5.html">Project 5</a></li>
                                                 <li><a href="projects-fram/project6.html">Project 6</a></li>
@@ -92,10 +92,10 @@
 													<header>
 														<h3>Project 2</h3>
 													</header>
-													<p>Coming soon.</p>
+													<p>Pressfit, laser cutting and vinylcutting</p>
 													<footer>
 														<ul class="actions">
-															<li><a href="#" class="button alt">Find out more</a></li>
+															<li><a href="project2.html" class="button alt">Find out more</a></li>
 														</ul>
 													</footer>
 												</section>
@@ -106,10 +106,10 @@
 													<header>
 														<h3>Project 3</h3>
 													</header>
-													<p>Coming soon.</p>
+													<p>Everyting in 3D. 3D printing, 3D scanning.</p>
 													<footer>
 														<ul class="actions">
-															<li><a href="#" class="button alt">Find out more</a></li>
+															<li><a href="project3.html" class="button alt">Find out more</a></li>
 														</ul>
 													</footer>
 												</section>
