--- a/index.html
+++ b/index.html
@@ -32,9 +32,7 @@
 												<li><a href="project1.html">Project 1</a></li>
                                                 <li><a href="project2.html">Project 2</a></li>
                                                 <li><a href="project3.html">Project 3</a></li>
-                                                <li><a href="projects-fram/project4.html">Project 4</a></li>
-                                                <li><a href="projects-fram/project5.html">Project 5</a></li>
-                                                <li><a href="projects-fram/project6.html">Project 6</a></li>
+                                                <li><a href="final_proj.html">Final Project</a></li>
 											</ul>
 									</ul>
 								</li>
