--- a/final_proj.html
+++ b/final_proj.html
@@ -56,7 +56,53 @@
                                         <p>I worked this project alongside my good friends, Hákon and Axel. The assignment in whole can be found on Hákon's <a href="https://hag922.github.io/VEL608G2/assignment4.html">website</a>
                                         </p>
                                         <h3>My contribution</h3>
-                                        <p>Our pjoect was a flower pot and we wanted to be able to give ot the right lighting. So we decided to add some brackets that would come over the flower and we could add some LED lights on the brackets. I was in charge of designing these brackets. We all went together to the Fablab to mill our design and dthen we assembled it.</p>
+                                        <p>Our pjoect was a flower pot and we wanted to be able to give ot the right lighting. So we decided to add some brackets that would come over the flower and we could add some LED lights on the brackets. I was in charge of designing these brackets. We all went together to the Fablab to mill our design and then we assembled it.</p>
+                                        <h3>Workload</h3>
+                                        <div class="table-wrapper">
+                                            <table class="alt">
+                                                <thead>
+                                                    <tr>
+                                                        <th>What was done</th>
+                                                        <th>Time spent[hours]</th>
+                                                    </tr>
+                                                </thead>
+                                                <tbody>
+                                                    <tr>
+                                                        <td>Deciding what to make</td>
+                                                        <td>3</td>
+                                                    </tr>
+                                                    <tr>
+                                                        <td>Designing and drawing</td>
+                                                        <td>2</td>
+                                                    </tr>
+                                                    <tr>
+                                                        <td>Preparing design for milling</td>
+                                                        <td>1</td>
+                                                    </tr>
+                                                    <tr>
+                                                        <td>Milling </td>
+                                                        <td>1</td>
+                                                    </tr>
+                                                    <tr>
+                                                        <td>Assembly/refinement</td>
+                                                        <td>3</td>
+                                                    </tr>
+                                                    <tr>
+                                                        <td>Drawing and designing additional parts</td>
+                                                        <td>0</td>
+                                                    </tr>
+                                                    <tr>
+                                                        <td>Documentation</td>
+                                                        <td>6</td>
+                                                    </tr>
+                                                    <tr>
+                                                        <td><b>Total work</b></td>
+                                                        <td><b>16 hours</b></td>
+                                                    </tr>
+                                                 </tbody>
+                                            </table>
+                                        </div>
+                                    
 
                                         
                                     </section>
