--- a/index.html
+++ b/index.html
@@ -116,17 +116,17 @@
 												<section class="box">
 													<a href="#" class="image featured"><img src="images/pic05.jpg" alt="" /></a>
 													<header>
-														<h3>Project 4</h3>
+														<h3>Final Project</h3>
 													</header>
-													<p>Coming soon.</p>
+													<p>Milling something big</p>
 													<footer>
 														<ul class="actions">
-															<li><a href="#" class="button alt">Find out more</a></li>
+															<li><a href="final_proj.html" class="button alt">Find out more</a></li>
 														</ul>
 													</footer>
 												</section>
 											</div>
-											<div class="col-4 col-6-medium col-12-small">
+											<!-- <div class="col-4 col-6-medium col-12-small">
 												<section class="box">
 													<a href="#" class="image featured"><img src="images/pic06.jpg" alt="" /></a>
 													<header>
@@ -154,7 +154,7 @@
 													</footer>
 												</section>
 											</div>
-										</div>
+										</div> -->
 									</section>
 
 							</div>
