--- a/project1.html
+++ b/project1.html
@@ -15,34 +15,32 @@
 						<h1><a href="index.html">Aron Björn Leifsson</a></h1>
 
 					<!-- Nav -->
-						<nav id="nav">
-							<ul>
-								<li class="current"><a href="index.html">Home</a></li>
-								<li>
-									<a href="#">School Projects</a>
-									<ul>
-										<li><a href="#">Manufacturing Processes</a>
-											<ul>
-												<li><a href="project1.html">Project 1</a></li>
-                                                <li><a href="projects-fram/project2.html">Project 2</a></li>
-                                                <li><a href="projects-fram/project3.html">Project 3</a></li>
-                                                <li><a href="projects-fram/project4.html">Project 4</a></li>
-                                                <li><a href="projects-fram/project5.html">Project 5</a></li>
-                                                <li><a href="projects-fram/project6.html">Project 6</a></li>
-											</ul>
-									</ul>
-								</li>
-								<li><a href="resume.html">Resume</a></li>
-								<li><a href="#">Book reviews</a>
-                                    <ul>
-                                        <li><a href="#">Norwegian Wood</a></li>
-                                        <li><a href="#">Crime and Punishment</a></li>		
-								    </ul>
-                                </li>
-                                    
-								<!--li><a href="no-sidebar.html">No Sidebar</a></li-->
-							</ul>
-						</nav>
+					<nav id="nav">
+						<ul>
+							<li class="current"><a href="index.html">Home</a></li>
+							<li>
+								<a href="#">School Projects</a>
+								<ul>
+									<li><a href="#">Manufacturing Processes</a>
+										<ul>
+											<li><a href="project1.html">Project 1</a></li>
+											<li><a href="project2.html">Project 2</a></li>
+											<li><a href="project3.html">Project 3</a></li>
+											<li><a href="final_proj.html">Final Project</a></li>
+										</ul>
+								</ul>
+							</li>
+							<li><a href="resume.html">Resume</a></li>
+							<li><a href="#">Book reviews</a>
+								<ul>
+									<li><a href="right-sidebar.html">Norwegian Wood</a></li>
+									<li><a href="crime_n_punishment.html">Crime and Punishment</a></li>		
+								</ul>
+							</li>
+								
+							<!--li><a href="no-sidebar.html">No Sidebar</a></li-->
+						</ul>
+					</nav>
 
 
 				</section>
