--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
 										<div class="row">
 											<div class="col-4 col-6-medium col-12-small">
 												<section class="box">
-													<a href="#" class="image featured"><img src="images/html.jpeg" alt="" /></a>
+													<a href="#" class="image featured"><img src="images/html.jpeg" style="height: 75%;" alt="" /></a>
 													<header>
 														<h3>Project 1</h3>
 													</header>
@@ -86,7 +86,7 @@
 											</div>
 											<div class="col-4 col-6-medium col-12-small">
 												<section class="box">
-													<a href="#" class="image featured"><img src="images/pic03.jpg" alt="" /></a>
+													<a href="project2.html" class="image featured"><img src="images/filefolder.JPG" style="height: 25%;" alt="" /></a>
 													<header>
 														<h3>Project 2</h3>
 													</header>
@@ -100,7 +100,7 @@
 											</div>
 											<div class="col-4 col-6-medium col-12-small">
 												<section class="box">
-													<a href="#" class="image featured"><img src="images/pic04.jpg" alt="" /></a>
+													<a href="project3.html" class="image featured"><img src="images/batman_book_holder.jpg" alt="" /></a>
 													<header>
 														<h3>Project 3</h3>
 													</header>
@@ -114,7 +114,7 @@
 											</div>
 											<div class="col-4 col-6-medium col-12-small">
 												<section class="box">
-													<a href="#" class="image featured"><img src="images/pic05.jpg" alt="" /></a>
+													<a href="final_proj.html" class="image featured"><img src="images/blomapottur.jpg" alt="" /></a>
 													<header>
 														<h3>Final Project</h3>
 													</header>
