--- a/project1.html
+++ b/project1.html
@@ -7,6 +7,8 @@
 	</head>
 	<body class="homepage is-preload">
 		<div id="page-wrapper">
+			<div class="row">
+				<div class="col-12">
 
 			<!-- Header -->
 				<section id="header">
@@ -55,8 +57,24 @@
                                         <p>The assignment was to create our own HTML webpage were we could share our projects. The webpage should also contain information  about our selves i.e. our resume and more. We should then share our webpage via GitHub using Git bash.</p>
                                         <p>This was my first introduction to HTML so I decided to use a template from <a href="https://html5up.net/">html5up</a> instead of making my own from scratch. I ended up deciding on a template called "Dopetrope" because it wasn't as dramatic as some of the others and had some neat features such as dropdown menu and a template that was perfect for my resume.
                                         </p>
-                                        <p>To edit the template I used the application "Brackets". The professor had recommended to use Brackets and it was quite easy to use, just plain and simple. I uploaded the template on Brackets and at first I was a bit overwhelmed. But after a while of studying the code, looking up the function of different HTML tags and watching youtube a video: <a href="https://www.youtube.com/watch?v=salY_Sm6mv4"></a> it got much clearer to me and nerves started to settle. I started to make changes to the code and get rid of the unneccesary features and the stuff I didn't like. <!--Here are pictures to show the difference of the template looked liked at first and the changes I made. -->
+                                        <p>To edit the template I used the application "Brackets". The professor had recommended to use Brackets and it was quite easy to use, just plain and simple. 
+											I uploaded the template on Brackets and at first I was a bit overwhelmed. 
+											But after a while of studying the code, looking up the function of different HTML tags and watching youtube a <a href="https://www.youtube.com/watch?v=salY_Sm6mv4">video</a> it got much clearer to me and nerves started to settle. 
+											I started to make changes to the code and get rid of the unneccesary features and the stuff I didn't like. 
+											Here are pictures to show the difference of the template looked liked at first and the changes I made.
                                         </p>
+										<img src="images/diff1.png" alt="" />
+										<p>I simplified this part </p>
+										<div class="row">
+											<div class="column">
+											  <img src="/images/diff2.png" alt="Snow" style="width: 500px;">
+											</div>
+											<div class="column">
+											  <img src="/images/diff2.png" alt="Forest" style="width: 500px;">
+											</div>
+											
+										  </div>
+										
                                         <p>
                                             The next step, after I was sufficently happy with my webpage, was to upload the webpage on GitHub. I first had to create a GitHub account. Then I had to install Git on my Mac, but to do that I first had to install Homebrew by copying this in my terminal.
                                             <a href="#" class="image featured"><img src="images/brew_install.jpg" alt="" /></a>
@@ -111,6 +129,11 @@
 											<h3>Phone</h3>
 											<p>(354) 862-0918</p>
 										</li>
+										<li>
+											<h3>Social media</h3>
+											<p>Don't reallu use social media but you can follow me on letterboxd for my film reviews</p>
+											<li><a class="icon brands fa-letterboxd" href="https://letterboxd.com/Aron_Leifsson/"><span class="label">letterboxd</span></a></li>
+										</li>
 									</ul>
 								</section>
 							</div>
@@ -127,6 +150,8 @@
 						</div>
 					</div>
 				</section>
+			</div>
+			</div>
         </div>
     </body>
 </html>
